structure out projects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
       <meta charset="utf-8">
       <title>vuenews</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <!-- <link href="../node_modules/bulma/css/bulma.css" rel="stylesheet"> -->
+      <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   </head>
 
   <body>
@@ -12,8 +13,8 @@
 
       <!-- built files will be auto injected -->
       
-      <script src="https://code.jquery.com/jquery-3.1.1.min.js" ></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
-      
+      <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" ></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script> -->
+
   </body>
 </html>
